Adding all the other resources
All of them have been redesigned. The logic is now way more streamlined.

--- a/charts/keycloak-operator/templates/keycloakclientrolemapping-crd.yaml
+++ b/charts/keycloak-operator/templates/keycloakclientrolemapping-crd.yaml
@@ -36,11 +36,11 @@ spec:
       name: SUBJECT
       type: string
     - description: The status of the resource
-      jsonPath: .status.resource.phase
+      jsonPath: .status.api.phase
       name: STATUS
       type: string
     - description: The last time the resource was changed
-      jsonPath: .status.resource.lastChanged
+      jsonPath: .status.api.lastTransitionTime
       name: LAST CHANGED
       priority: 1
       type: date
@@ -121,13 +121,10 @@ spec:
             type: object
           status:
             properties:
-              clientID:
-                description: The ID of the client owning the role concerned by the mapping
-                type: string
-              resource:
-                description: The status of the keycloak resource
+              api:
+                description: Base status
                 properties:
-                  lastChanged:
+                  lastTransitionTime:
                     description: The time the resource was last updated.
                     format: date-time
                     type: string
@@ -136,6 +133,9 @@ spec:
                       to sync, etc
                     type: string
                 type: object
+              clientID:
+                description: The ID of the client owning the role concerned by the mapping
+                type: string
               roleID:
                 description: The ID of the client role concerned by the mapping
                 type: string
