--- a/charts/keycloak-operator/templates/keycloakldapmapper-crd.yaml
+++ b/charts/keycloak-operator/templates/keycloakldapmapper-crd.yaml
@@ -23,11 +23,11 @@ spec:
     - jsonPath: .spec.type
       name: TYPE
       type: string
-    - jsonPath: .status.resource.phase
+    - jsonPath: .status.api.phase
       name: STATUS
       type: string
     - description: The last time the resource was changed
-      jsonPath: .status.resource.lastChanged
+      jsonPath: .status.api.lastTransitionTime
       name: LAST CHANGED
       priority: 1
       type: date
@@ -437,16 +437,10 @@ spec:
           status:
             description: KeycloakLDAPMapperStatus defines the observed state of KeycloakLDAPMapper
             properties:
-              componentID:
-                description: ID of the component representing the managed LDAP mapper
-                type: string
-              federationID:
-                description: ID of the LDAP Federation it belongs to
-                type: string
-              resource:
-                description: The status of the keycloak resource
+              api:
+                description: Base status
                 properties:
-                  lastChanged:
+                  lastTransitionTime:
                     description: The time the resource was last updated.
                     format: date-time
                     type: string
@@ -455,6 +449,12 @@ spec:
                       to sync, etc
                     type: string
                 type: object
+              componentID:
+                description: ID of the component representing the managed LDAP mapper
+                type: string
+              federationID:
+                description: ID of the LDAP Federation it belongs to
+                type: string
               result:
                 description: Result of the last successful sync
                 properties:
