--- a/config/crd/bases/keycloak.japannext.co.jp_keycloakclientscopes.yaml
+++ b/config/crd/bases/keycloak.japannext.co.jp_keycloakclientscopes.yaml
@@ -28,11 +28,11 @@ spec:
       name: PROTOCOL
       type: string
     - description: The status of the realm
-      jsonPath: .status.resource.phase
+      jsonPath: .status.api.phase
       name: STATUS
       type: string
     - description: The last time the resource was changed
-      jsonPath: .status.resource.lastChanged
+      jsonPath: .status.api.lastTransitionTime
       name: LAST CHANGED
       priority: 1
       type: date
@@ -150,10 +150,10 @@ spec:
           status:
             description: KeycloakClientScopeStatus defines the observed state of KeycloakClientScope
             properties:
-              resource:
-                description: The status of the keycloak resource
+              api:
+                description: Base status
                 properties:
-                  lastChanged:
+                  lastTransitionTime:
                     description: The time the resource was last updated.
                     format: date-time
                     type: string
@@ -162,7 +162,7 @@ spec:
                       to sync, etc
                     type: string
                 type: object
-              scopeID:
+              clientScopeID:
                 description: The ID of the client scope deployed
                 type: string
             type: object
