--- a/charts/keycloak-operator/templates/keycloakclientprotocolmapper-crd.yaml
+++ b/charts/keycloak-operator/templates/keycloakclientprotocolmapper-crd.yaml
@@ -107,16 +107,10 @@ spec:
             description: KeycloakClientProtocolMapperStatus defines the observed state
               of KeycloakClientProtocolMapper
             properties:
-              clientID:
-                description: The ID of the client
-                type: string
-              protocolMapperID:
-                description: The ID of the protocol mapper managed
-                type: string
-              resource:
-                description: The status of the keycloak resource
+              api:
+                description: Base status
                 properties:
-                  lastChanged:
+                  lastTransitionTime:
                     description: The time the resource was last updated.
                     format: date-time
                     type: string
@@ -125,6 +119,12 @@ spec:
                       to sync, etc
                     type: string
                 type: object
+              clientID:
+                description: The ID of the client
+                type: string
+              protocolMapperID:
+                description: The ID of the protocol mapper managed
+                type: string
             type: object
         type: object
     served: true
