--- a/charts/keycloak-operator/templates/keycloakldapfederation-crd.yaml
+++ b/charts/keycloak-operator/templates/keycloakldapfederation-crd.yaml
@@ -20,11 +20,11 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.resource.phase
+    - jsonPath: .status.api.phase
       name: STATUS
       type: string
     - description: The last time the resource was changed
-      jsonPath: .status.resource.lastChanged
+      jsonPath: .status.api.lastTransitionTime
       name: LAST CHANGED
       priority: 1
       type: date
@@ -318,13 +318,10 @@ spec:
             description: KeycloakLDAPFederationStatus defines the observed state of
               KeycloakLDAPFederation
             properties:
-              componentID:
-                description: ID of the component representing the managed LDAP federation
-                type: string
-              resource:
-                description: The status of the keycloak resource
+              api:
+                description: Base status
                 properties:
-                  lastChanged:
+                  lastTransitionTime:
                     description: The time the resource was last updated.
                     format: date-time
                     type: string
@@ -333,6 +330,9 @@ spec:
                       to sync, etc
                     type: string
                 type: object
+              componentID:
+                description: ID of the component representing the managed LDAP federation
+                type: string
               result:
                 description: Result of the last successful sync
                 properties:
