--- a/config/crd/bases/keycloak.japannext.co.jp_keycloakclientroles.yaml
+++ b/config/crd/bases/keycloak.japannext.co.jp_keycloakclientroles.yaml
@@ -29,11 +29,11 @@ spec:
       name: ROLE
       type: string
     - description: The status of the resource
-      jsonPath: .status.resource.phase
+      jsonPath: .status.api.phase
       name: STATUS
       type: string
     - description: The last time the resource was changed
-      jsonPath: .status.resource.lastChanged
+      jsonPath: .status.api.lastTransitionTime
       name: LAST CHANGED
       priority: 1
       type: date
@@ -138,13 +138,10 @@ spec:
             type: object
           status:
             properties:
-              clientID:
-                description: The ID of the client the role belongs to
-                type: string
-              resource:
-                description: The status of the keycloak resource
+              api:
+                description: Base status
                 properties:
-                  lastChanged:
+                  lastTransitionTime:
                     description: The time the resource was last updated.
                     format: date-time
                     type: string
@@ -153,6 +150,9 @@ spec:
                       to sync, etc
                     type: string
                 type: object
+              clientID:
+                description: The ID of the client the role belongs to
+                type: string
               roleID:
                 description: The ID of the role managed
                 type: string
