--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -10,6 +10,66 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /mutate-keycloak-japannext-co-jp-v1alpha2-keycloakclient
+  failurePolicy: Fail
+  name: mkeycloakclient.kb.io
+  rules:
+  - apiGroups:
+    - keycloak.japannext.co.jp
+    apiVersions:
+    - v1alpha2
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - keycloakclients
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /mutate-keycloak-japannext-co-jp-v1alpha2-keycloakclientrole
+  failurePolicy: Fail
+  name: mkeycloakclientrole.kb.io
+  rules:
+  - apiGroups:
+    - keycloak.japannext.co.jp
+    apiVersions:
+    - v1alpha2
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - keycloakclientroles
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /mutate-keycloak-japannext-co-jp-v1alpha2-keycloakldapfederation
+  failurePolicy: Fail
+  name: mkeycloakldapfederation.kb.io
+  rules:
+  - apiGroups:
+    - keycloak.japannext.co.jp
+    apiVersions:
+    - v1alpha2
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - keycloakldapfederations
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
       path: /mutate-keycloak-japannext-co-jp-v1alpha2-keycloakrealm
   failurePolicy: Fail
   name: mkeycloakrealm.kb.io
