Defaults closer to working defaults
The update of these field is not working properly, so let's
ensure good defaults that will work as expected.

--- a/charts/keycloak-operator/templates/keycloakclient-crd.yaml
+++ b/charts/keycloak-operator/templates/keycloakclient-crd.yaml
@@ -324,6 +324,12 @@ spec:
                     default: false
                     type: boolean
                   defaultClientScopes:
+                    default:
+                    - acr
+                    - email
+                    - profile
+                    - roles
+                    - web-origins
                     items:
                       type: string
                     type: array
