--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: nexus.dc.japannext.co.jp:8442/unix/kubernetes/keycloak-operator
+  newName: ghcr.io/japannext/keycloak-operator
   newTag: 1.1.3
