--- a/charts/keycloak-operator/Chart.yaml
+++ b/charts/keycloak-operator/Chart.yaml
@@ -6,5 +6,5 @@ description: |
   Realms, OIDC clients, LDAP user federations, or role-mapping
   to users and groups.
 type: application
-version: 1.1.3
-appVersion: "1.1.3"
+version: 1.1.4
+appVersion: 1.1.4
