--- a/charts/keycloak-operator/values.yaml
+++ b/charts/keycloak-operator/values.yaml
@@ -32,7 +32,7 @@ controllerManager:
         - ALL
     image:
       repository: ghcr.io/japannext/keycloak-operator
-      tag: ""
+      tag:
     imagePullPolicy: IfNotPresent
     resources:
       limits:
